--- a/Products.Client/Products.Client/views/product-update.html
+++ b/Products.Client/Products.Client/views/product-update.html
@@ -1,4 +1,4 @@
-﻿<form enctype="application/x-www-form-urlencoded">
+﻿<form enctype="multipart/form-data">
     <label for="name">Name </label>
     <input id="name" type="text" />
     <br />
