--- a/Products.Client/Products.Client/views/product-update.html
+++ b/Products.Client/Products.Client/views/product-update.html
@@ -1,17 +1,22 @@
-﻿<form enctype="multipart/form-data">
+﻿<form id="update-form" enctype="multipart/form-data">
+    <input type="hidden" name="method" value="put" />
+    <input type="hidden" name="id" id="product-id" />
+    <img width="200" height="100" />
+    <br />
     <label for="name">Name </label>
-    <input id="name" type="text" />
+    <input id="name" name="name" type="text" />
     <br />
     <label for="description">Description </label>
-    <textarea id="description" />
+    <textarea id="description" name="description"></textarea>
     <br />
     <label for="category">Category</label>
-    <select id="category">
-        <option id="0"> </option>
-        <option id="1">Category 1</option>
+    <select id="category" name="categoryid">
+        <option id=""></option>
     </select>
     <br />
-    <label for="image">Image </label>
-    <input id="image" type="file"/>
-    <input type="submit" value="Create" />
+    <label for="image-file">Image </label>
+    <input id="image-file" name="image-file" type="file" />
+    <br />
+    <input id="cancel-update" type="button" value="Cancel" />
+    <input type="submit" value="Update" />
 </form>
